# fspiox-api

./: Cargo.toml  README.md  default.nix
.github/workflows/: integration_test.yml
.openapi-generator/: FILES
docs/: AmountType.md  AuthenticationInfo.md  AuthenticationValue.md  AuthorizationResponse.md  AuthorizationsApi.md  AuthorizationsIdPutResponse.md  BalanceOfPayments.md  BinaryString32.md  BulkQuotesApi.md  BulkQuotesIdPutResponse.md  BulkQuotesPostRequest.md  BulkTransferState.md  BulkTransfersApi.md  BulkTransfersIdPutResponse.md  BulkTransfersPostRequest.md  CorrelationId.md  DateOfBirth.md  ErrorDescription.md  ErrorInformation.md  ErrorInformationObject.md  ErrorInformationResponse.md  Extension.md  ExtensionKey.md  ExtensionList.md  ExtensionValue.md  FspId.md  GeoCode.md  IlpCondition.md  IlpFulfilment.md  IlpPacket.md  IndividualQuote.md  IndividualQuoteResult.md  IndividualTransfer.md  IndividualTransferResult.md  Latitude.md  Longitude.md  MerchantClassificationCode.md  MiddleName.md  Money.md  Name.md  (+45 more)
src/: clients.rs  common.rs  lib.rs  quote.rs  transfer.rs
src/apis/: authorizations_api.rs  bulk_quotes_api.rs  bulk_transfers_api.rs  client.rs  configuration.rs  mod.rs  participants_api.rs  parties_api.rs  quotes_api.rs  transaction_requests_api.rs  transactions_api.rs  transfers_api.rs
src/clients/: clients.rs  ml_api_adapter.rs  quote.rs  transfer.rs
src/models/: amount.rs  amount_type.rs  authentication_info.rs  authentication_type.rs  authentication_value.rs  authorization_response.rs  authorizations_id_put_response.rs  balance_of_payments.rs  binary_string.rs  binary_string32.rs  bulk_quotes_id_put_response.rs  bulk_quotes_post_request.rs  bulk_transfer_state.rs  bulk_transfers_id_put_response.rs  bulk_transfers_post_request.rs  code.rs  correlation_id.rs  currency.rs  date_of_birth.rs  error_code.rs  error_description.rs  error_information.rs  error_information_object.rs  error_information_response.rs  extension.rs  extension_key.rs  extension_list.rs  extension_value.rs  first_name.rs  fsp_id.rs  geo_code.rs  ilp_condition.rs  ilp_fulfilment.rs  ilp_packet.rs  individual_quote.rs  individual_quote_result.rs  individual_transfer.rs  individual_transfer_result.rs  integer.rs  last_name.rs  (+46 more)
tests/: system.rs
tests/clients/: smoke.rs
