[package]
name = "fspiox-api"
version = "0.4.0"
authors = ["msk- <mattkingston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
rust_decimal = { version = "1", default-features = false, features = ["serde"] }
derive_more = "0.99"
strum = "0.21"
strum_macros = "0.21"

# optional
hyper = { version = "0.14", optional = true }
# http probably needs to be the same version that the above version of hyper depends on.
http = { version = "0.2.4", optional = true }
url = { version = "2", optional = true }
ts-rs = { version = "3", optional = true }

[features]
fsp_http = ["hyper", "http", "url"]
typescript_types = ["ts-rs"]
