[package]
name = "fspiox-api"
version = "0.4.0"
authors = ["msk- <mattkingston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
rust_decimal = { version = "1", default-features = false, features = ["serde"] }
derive_more = "0.99"
strum = "0.21"
strum_macros = "0.21"
arrayvec = { version = "0.7.1", features = ["serde"] }
# http probably needs to be the same version that our version of hyper depends on.
http = { version = "0.2.4" }
http-serde = { version = "1.0" }
thiserror = "1.0.29"

# optional
hyper = { version = "0.14", optional = true, features = ["client", "http1"] }
url = { version = "2", optional = true }
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "ddd461522591a90b987b22dd05e06cfccbea6f5a", optional = true }
tokio = { version = "1.6.1", features = ["full"], optional = true }
kube = { git = "https://github.com/kazk/kube-rs", rev = "aa58c61612b8e8721779986d511549ca6b5991c4", features = ["ws"] }
kube-runtime = { version = "0.60.0", optional = true }
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_21"], optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
async-trait = { version = "0.1.51", optional = true }

[features]
fsp_http = ["hyper", "url"]
typescript_types = ["ts-rs"]
clients = ["tokio", "fsp_http"]
clients-kube = ["clients", "kube", "kube-runtime", "k8s-openapi", "openssl", "async-trait"]
